# arduis

./: .gitignore  CLAUDE.md  LICENSE  PKGBUILD  README.md  meson.build  pyproject.toml  run.sh
.claude/: settings.json
.claude/hooks/: pytest-on-stop.sh
.claude/plans/: eu-gostaria-de-melhorar-humble-gem.md  voice-agent-for-arduis-mutable-sundae.md
.planning/: CODE-REVIEW-2026-06-15.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/debug/: knowledge-base.md  paned-collapse-3-terminals.md  split-broken-after-todays-changes.md  workspace-sidebar-highlight-wrong-item.md
.planning/debug/resolved/: paned-collapse-3-terminals.md  split-black-pane-hole.md  workspace-sidebar-highlight-wrong-item.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-terminal/: 01-01-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-loop-new-worktree-env-agent/: 02-01-PLAN.md  02-02-PLAN.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-parallel-worktrees-sidebar-ram-groundwork/: 03-01-SUMMARY.md  03-03-PLAN.md  03-04-PLAN.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-UI-SPEC.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/03.1-worktree-as-terminal-workspace/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-02-SUMMARY.md  03.1-03-SUMMARY.md  03.1-CONTEXT.md  03.1-RESEARCH.md  03.1-VALIDATION.md
.planning/phases/03.2-projects-and-cross-repo-tasks/: 03.2-01-SUMMARY.md  03.2-02-PLAN.md  03.2-03-SUMMARY.md  03.2-CONTEXT.md  03.2-DISCUSSION-LOG.md  03.2-GAP-topbar-repo-chips.md  03.2-HUMAN-UAT.md  03.2-RESEARCH.md  03.2-VALIDATION.md
.planning/phases/03.3-topbar-repo-chips/: 03.3-01-SUMMARY.md  03.3-02-PLAN.md  03.3-02-SUMMARY.md  03.3-03-PLAN.md  03.3-CONTEXT.md  03.3-GAP-topbar-multi-project.md  03.3-HUMAN-UAT.md  03.3-SECURITY.md  03.3-VERIFICATION.md
.planning/phases/03.4-topbar-multi-project-switcher-corrective/: 03.4-01-PLAN.md  03.4-02-PLAN.md  03.4-03-PLAN.md  03.4-03-SUMMARY.md  03.4-04-PLAN.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: arduis.in  io.github.thallys.Arduis.desktop  io.github.thallys.Arduis.metainfo.xml  meson.build
debian/: changelog  control  copyright
docs/: MOTIVATION.md  PHASE-01-ACCEPTANCE.md  PHASE2-ACCEPTANCE.md  ROADMAP.md
docs/mockup/: interface-v1.html  interface-v2-bridgespace.html
src/: main.py  meson.build
src/arduis/: __init__.py  agentconfig.py  appconfig.py  attention.py  caps.py  claude_trust.py  compose.py  containerstate.py  docker_service.py  exit_status.py  gh.py  git_service.py  host_runner.py  keyconfig.py  keymap.py  layout.py  layout_store.py  main.py  project.py  projects_store.py  repoconfig.py  resource_monitor.py  review.py  review_cache.py  session.py  spawn.py  task_layout.py  theme.py  themes.py  topbar.py  trust.py  voice.py  voice_controller.py  voice_store.py  voiceconfig.py  window.py  workspace_layout.py  worktree.py
src/arduis/hooks/: arduis_hook.py
src/arduis/swarm/: __init__.py
tests/: test_agentconfig.py  test_appconfig.py  test_attention.py  test_attention_ring.py  test_caps.py  test_claude_trust.py  test_compose.py  test_compose_env_files.py  test_compose_fixed_names.py  test_compose_smoke.py  test_compose_user.py  test_compose_volume_clone.py  test_compose_volume_init.py  test_containerstate.py  test_docker_service.py  test_exit_decode.py  test_gh.py  test_git_service_cwd.py  test_hook_script.py  test_host_runner.py  test_icons_render.py  test_keyconfig.py  test_keymap.py  test_layout.py  test_layout_store.py  test_packaging_install_tree.py  test_packaging_manifest.py  test_packaging_native_noop.py  test_packaging_version.py  test_paned_ratio_guard.py  test_project.py  test_projects_persist.py  test_projects_registry.py  test_prompt_scan.py  test_repoconfig.py  test_resource_monitor.py  test_review.py  test_review_cache.py  test_review_cleanup_smoke.py  test_session.py  (+21 more)
tests/fixtures/: compose_config.json
tests/smoke/: test_project_lifecycle_smoke.py  test_project_switch_smoke.py  test_setup_feed_smoke.py  test_theme_switch_smoke.py  test_topbar_chips_smoke.py  test_voice_history_smoke.py
(+154 files in other folders)
